{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 334,
  "lineage": "20fade32-1a84-e283-f7a6-80ed6d548480",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-18T04:56:47.598-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gproject-368612/global/firewalls/bastion-vm-bastion-ssh",
            "log_config": [],
            "name": "bastion-vm-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "gproject-368612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/firewalls/bastion-vm-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-18T04:56:47.244-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gproject-368612/global/firewalls/http",
            "log_config": [],
            "name": "http",
            "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "gproject-368612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/firewalls/http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gproject-368612/zones/europe-west3-b/disks/bastion-vm-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gproject-368612/zones/europe-west3-b/instances/bastion-vm-bastion",
            "instance_id": "138117943742054345",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "RKVskqKVaOw=",
            "name": "bastion-vm-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.207.186.246",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gproject-368612/regions/europe-west3/subnetworks/kubernetes-cluster--subnet",
                "subnetwork_project": "gproject-368612"
              }
            ],
            "project": "gproject-368612",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/zones/europe-west3-b/instances/bastion-vm-bastion",
            "service_account": [
              {
                "email": "vm-service-account-id@gproject-368612.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.bastion.google_service_account.service_account",
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gproject-368612/global/networks/kubernetes-cluster",
            "mtu": 0,
            "name": "kubernetes-cluster",
            "project": "gproject-368612",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/gproject-368612/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "gproject-368612",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/routes/egress-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-18T04:57:09.763-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gproject-368612/regions/europe-west3/routers/kubernetes-cluster-router",
            "name": "kubernetes-cluster-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
            "project": "gproject-368612",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/regions/europe-west3/routers/kubernetes-cluster-router"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gproject-368612/europe-west3/kubernetes-cluster-router/kubernetes-cluster--subnet-nat-router",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "kubernetes-cluster--subnet-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gproject-368612",
            "region": "europe-west3",
            "router": "kubernetes-cluster-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/gproject-368612/regions/europe-west3/subnetworks/kubernetes-cluster--subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_router.router",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-18T08:38:59.068-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/gproject-368612/regions/europe-west3/subnetworks/kubernetes-cluster--restricted-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "kubernetes-cluster--restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gproject-368612",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/regions/europe-west3/subnetworks/kubernetes-cluster--restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-18T04:56:47.865-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/gproject-368612/regions/europe-west3/subnetworks/kubernetes-cluster--subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "kubernetes-cluster--subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gproject-368612/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gproject-368612",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.101.0.0/16",
                "range_name": "gke-app-cluster-pods-37c30673"
              },
              {
                "ip_cidr_range": "10.102.0.0/16",
                "range_name": "gke-app-cluster-services-37c30673"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gproject-368612/regions/europe-west3/subnetworks/kubernetes-cluster--subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}